istio/auth/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: auth-service-mtls
  namespace: default   # <-- Replace with your service namespace
spec:
  selector:
    matchLabels:
      app: auth  # <-- This should match the label of your auth-service Deployment
  mtls:
    mode: STRICT
