istio/auth/auth-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app: auth
    service: auth
spec:
  ports:
    - port: 8000
      name: http
  selector:
    app: auth

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-v1
  labels:
    app: auth
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
      version: v1
  template:
    metadata:
      labels:
        app: auth
        version: v1
    spec:
      serviceAccountName: auth-details
      containers:
        - name: auth
          image:  istio-auth-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
---
