istio/auth/auth-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth
spec:
  hosts:
    - "*"
  gateways:
    - shared-gateway
  http:
    - match:
        - uri:
            prefix: /api/auth
      route:
        - destination:
            host: auth
            port:
              number: 8000
#apiVersion: v1
#kind: Service
#metadata:
#  name: auth
#spec:
#  type: NodePort
#  selector:
#    app: auth
#  ports:
#    - port: 8000
#      targetPort: 8000
#      nodePort: 30080  # Or leave out this line to auto-assign

#apiVersion: networking.istio.io/v1beta1
#kind: VirtualService
#metadata:
#  name: auth
#  namespace: default
#spec:
#  hosts:
#    - "*"
#  gateways:
#    - shared-gateway
#  http:
#    - match:
#        - uri:
#            prefix: /api/auth
#      rewrite:
#        uri: /
#      route:
#        - destination:
#            host: auth
#            port:
#              number: 8000
